# newsletter-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: newsletter.yml
agent/: deduplicator.py  delivery.py  discoverer.py  exceptions.py  fetcher.py  models.py  pipeline.py  scorer.py  selector.py  writer.py
cli/: manage.py
config/: settings.toml
data/: memory.db
db/: database.py  schema.sql
newsletters/: 2026-04-01.md  2026-04-06.md  2026-04-27.md  2026-05-04.md
templates/: email.html
